0.7.2/_sources/gettingstarted/examples/gallery/auto_examples_core/index.rst
:orphan:

.. _examples-core-index:

####################
Core functionalities
####################



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


How to use NDDataset
--------------------

This section contains examples of how to use the NDDataset class.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="NDDataset creation and plotting example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/thumb/sphx_glr_plot_a_create_dataset_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_a_create_dataset.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NDDataset creation and plotting example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we show how coordinates can be used in SpectroChemPy">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/thumb/sphx_glr_plot_b_coordinates_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_b_coordinates.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NDDataset coordinates example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we show how units can be used in SpectroChemPy">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/images/thumb/sphx_glr_plot_c_units_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_a_nddataset_plot_c_units.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Units manipulation examples</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Import / Export
---------------

This section contains examples of how to import and export data
from/to various file formats.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we show the use of the generic read method to create dataset either from local or remote files.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_generic_read_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_generic_read.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reading datasets</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we load an experimental SPG file (OMNIC) and plot it.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_IR_from_omnic_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_omnic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading an IR (omnic SPG) experimental file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we load an experimental Bruker OPUS files and plot it.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_IR_from_opus_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_IR_from_opus.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading Bruker OPUS files</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we load a NMR dataset (in the Bruker format) and plot it.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_nmr_from_bruker_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_nmr_from_bruker.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading of experimental 1D NMR data</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Here we load experimental LABSPEC spectra and plot them.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_raman_from_labspec_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_raman_from_labspec.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Loading RAMAN experimental file</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The spectral data used has been downloaded from https://github.com/alchem0x2A/py-wdf-reader (MIT License) and stored in the local directory ramandata/wire.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/c_importer/images/thumb/sphx_glr_plot_read_renishaw_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_c_importer_plot_read_renishaw.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Reading Renishaw WiRE files</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Plotting datasets
-----------------

This section contains examples of how to plot datasets.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Using plot_multiple to plot several datasets on the same figure">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/thumb/sphx_glr_plot_plot_multiple_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plot_multiple.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Using plot_multiple to plot several datasets on the same figure</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Introduction to the plotting librairie">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/d_plotting/images/thumb/sphx_glr_plot_plotting_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_d_plotting_plot_plotting.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Introduction to the plotting librairie</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Project Management
------------------

This section contains examples of how to manage projects with spectrochempy.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we create a Project from scratch">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_core/e_project/images/thumb/sphx_glr_plot_project_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_core_e_project_plot_project.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Project creation</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /gettingstarted/examples/gallery/auto_examples_core/a_nddataset/index.rst
   /gettingstarted/examples/gallery/auto_examples_core/c_importer/index.rst
   /gettingstarted/examples/gallery/auto_examples_core/d_plotting/index.rst
   /gettingstarted/examples/gallery/auto_examples_core/e_project/index.rst

